--- a/css/minStyles.css
+++ b/css/minStyles.css
@@ -250,7 +250,7 @@ iframe {
 .figure {
   display: inline-block; }
 
-
+.container,
 .container-fluid,
 .container-sm,
 .container-md {
@@ -261,23 +261,23 @@ iframe {
   margin-left: auto; }
 
 @media (min-width: 576px) {
-   .container-sm {
+  .container, .container-sm {
     max-width: 540px; } }
 
 @media (min-width: 768px) {
-   .container-sm, .container-md {
+  .container, .container-sm, .container-md {
     max-width: 720px; } }
 
 @media (min-width: 992px) {
-   .container-sm, .container-md {
+  .container, .container-sm, .container-md {
     max-width: 960px; } }
 
 @media (min-width: 1200px) {
-   .container-sm, .container-md {
+  .container, .container-sm, .container-md {
     max-width: 1140px; } }
 
 @media (min-width: 1400px) {
-   .container-sm, .container-md {
+  .container, .container-sm, .container-md {
     max-width: 1320px; } }
 
 .row {
@@ -351,7 +351,7 @@ iframe {
   justify-content: space-between;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem; }
-  
+  .navbar > .container,
   .navbar > .container-fluid, .navbar > .container-sm, .navbar > .container-md {
     display: flex;
     flex-wrap: inherit;
@@ -502,9 +502,80 @@ iframe {
   0% {
     background-position-x: 1rem; } }
 
+.carousel {
+  position: relative; }
+
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  overflow: hidden; }
+  .carousel-inner::after {
+    display: block;
+    clear: both;
+    content: ""; }
+
+.carousel-item {
+  position: relative;
+  display: none;
+  float: left;
+  width: 100%;
+  margin-right: -100%;
+  backface-visibility: hidden;
+  transition: transform 0.6s ease-in-out; }
+  @media (prefers-reduced-motion: reduce) {
+    .carousel-item {
+      transition: none; } }
+
+.carousel-item.active {
+  display: block; }
+
 /* rtl:begin:ignore */
 
 /* rtl:end:ignore */
+
+.carousel-control-prev,
+.carousel-control-next {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 15%;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+  background: none;
+  border: 0; 
+  opacity: 0.5;
+  transition: opacity 0.15s ease; }
+  @media (prefers-reduced-motion: reduce) {
+    .carousel-control-prev,
+    .carousel-control-next {
+      transition: none; } }
+  .carousel-control-prev:hover, .carousel-control-prev:focus,
+  .carousel-control-next:hover,
+  .carousel-control-next:focus {
+    color: #fff;
+    text-decoration: none;
+    outline: 0;
+    opacity: 0.9; }
+
+.carousel-control-prev {
+  left: 0; }
+
+.carousel-control-next {
+  right: 0; }
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: 100% 100%; }
 
 /* rtl:options: {
   "autoRename": true,
@@ -514,6 +585,47 @@ iframe {
     "replace" : "next"
   } ]
 } */
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e"); }
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e"); }
+
+.carousel-indicators {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin-right: 15%;
+  margin-bottom: 1rem;
+  margin-left: 15%;
+  list-style: none; }
+  .carousel-indicators [data-bs-target] {
+    box-sizing: content-box;
+    flex: 0 1 auto;
+    width: 30px;
+    height: 3px;
+    padding: 0;
+    margin-right: 3px;
+    margin-left: 3px;
+    text-indent: -999px;
+    cursor: pointer;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    opacity: 0.5;
+    transition: opacity 0.6s ease; }
+    @media (prefers-reduced-motion: reduce) {
+      .carousel-indicators [data-bs-target] {
+        transition: none; } }
+  .carousel-indicators .active {
+    opacity: 1; }
 
 @keyframes spinner-border {
   to {
@@ -547,6 +659,17 @@ iframe {
   top: 0;
   z-index: 1020; }
 
+.visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border: 0 !important; }
+
 .d-inline-block {
   display: inline-block !important; }
 
@@ -562,8 +685,14 @@ iframe {
 .justify-content-start {
   justify-content: flex-start !important; }
 
+.justify-content-end {
+  justify-content: flex-end !important; }
+
 .justify-content-center {
   justify-content: center !important; }
+
+.justify-content-between {
+  justify-content: space-between !important; }
 
 .justify-content-around {
   justify-content: space-around !important; }
@@ -608,6 +737,12 @@ iframe {
 
 .pt-4 {
   padding-top: 1.5rem !important; }
+
+.fst-italic {
+  font-style: italic !important; }
+
+.fw-bolder {
+  font-weight: bolder !important; }
 
 .text-start {
   text-align: left !important; }
@@ -909,3 +1044,103 @@ form .buttonBlock {
     transform: translateY(0.7); }
   100% {
     transform: translateY(0.9); } }
+
+
+    .carousel-control-prev{
+      justify-content: flex-start;
+    }
+    .carousel-control-next{
+      justify-content: flex-end;
+      
+    }
+
+    div.formBlock >p{
+      width: 13rem;
+      font-size: 1.5rem;
+    }
+
+    .carrSpan:hover{
+      cursor: pointer;
+      font-weight: bolder;
+      color:red;
+    }
+
+.eraseButton{
+  vertical-align: middle;
+  outline: none;
+  border-radius: 0.5rem;
+  border-color: #f4a2e731; 
+  margin-top: 1rem;
+  margin-left: 3rem;
+  background-color: violet;
+  text-transform: uppercase;
+  padding: 0.5rem 1rem 0.5rem 1rem; }
+.eraseButton:hover {
+  background-color: #7a6c95; 
+}
+
+.logout{
+  font-size: 1.5rem;
+  text-align: end;
+  padding: 0.5rem;
+
+}
+
+.logout:hover{
+  font-weight: bolder;
+  cursor: pointer;
+}
+
+.carousel-control-prev{
+  justify-content: flex-start;
+}
+.carousel-control-next{
+  justify-content: flex-end;
+  
+}
+
+div.formBlock >p{
+  width: 13rem;
+  font-size: 1.5rem;
+}
+
+.carrSpan:hover{
+  cursor: pointer;
+  font-weight: bolder;
+  color:red;
+}
+
+.eraseButton{
+vertical-align: middle;
+outline: none;
+border-radius: 0.5rem;
+border-color: #f4a2e731; 
+margin-top: 1rem;
+margin-left: 3rem;
+background-color: violet;
+text-transform: uppercase;
+padding: 0.5rem 1rem 0.5rem 1rem; }
+.eraseButton:hover {
+background-color: #7a6c95; 
+}
+
+.logout{
+font-size: 1.5rem;
+text-align: end;
+padding: 0.5rem;
+
+}
+
+.logout:hover{
+font-weight: bolder;
+cursor: pointer;
+}
+
+.swal2-popup{
+background-color: #78347ef2 !important;
+color: white !important;
+}
+
+.swal2-styled.swal2-deny, .swal2-styled.swal2-confirm{
+background-color: #5a487c !important;
+}
